
2015-03-20
- bios/processor.S: Fix FPU detection: 68881/68882 are now differentiated
  correctly. (RFB)

2015-03-21
- bios/coldfire.c bios/delay.c include/config.h: Fix delay_loop() timing
  for M548X machines. (RFB)
- bios/bios.c bios/blkdev.c bios/blkdev.h bios/initinfo.c bios/initinfo.h:
  Allow user to specify boot partition at startup. (RFB)

2015-03-23
- bios/blkdev.h bios/initinfo.c: Don't display hard disk bypass message if
  no hard disk. (RFB)
- bios/initinfo.c: Clear screen after initinfo() display. (RFB)

2015-03-24
- bios/bios.c: Fix regression: AUTO-folder programs & ACCs were not run
  on a floppy-only system. (RFB)

2015-03-26
- bios/bios.c bios/blkdev.c bios/blkdev.h bios/floppy.c bios/floppy.h:
  Run hard disk boot sector code (disabled by default). (RFB)
- doc/bugs.txt: Updated to reflect recent bug fixes.  Contributed by Eero
  Tamminen. (RFB)
- bios/lineavars.S: Updated comments.  Contributed by Eero Tamminen. (RFB)
- vdi/vdi_line.c: Ignore lineA variable 'multifill' for linea_rect() and
  linea_polygon().  Contributed by Eero Tamminen. (RFB)
  
2015-03-27
- vdi/vdi_fill.c: Code cleanup, better comments.  Contributed by Eero
  Tamminen. (RFB)

2015-03-28
- aes/gemrslib.c: Reverted recent update, since it prevented a valid action
  (loading new-format RSC file but not subsequently accessing CICONs). (RFB)
- aes/gemfmalt.c: Cosmetic improvement: increased button spacing in alerts.
  Contributed by Eero Tamminen. (RFB)
- vdi/vdi_main.c: Remove unused array (saves 0.5K RAM). (RFB)

2015-03-29
- bios/aciavecs.S bios/vectors.S util/memset.S util/minicrt.S util/nlsasm.S
  util/setjmp.S: Use moveq instead of move.l when possible. (VRI)
- bdos/rwa.S: Use addq.l instead of add.l. (VRI)
- bios/aciavecs.S: Enable IKBD protocol even without ACIA hardware. (VRI)
- desk/deskpro.c desk/deskmain.c desk/desksupp.c: Code cleanup: make
  shel_write() 'isover' parameter explicitly 1 (no other value is
  supported). (RFB)