@@ -6129,3 +6129,5 @@ Start... early ages
 - desk/deskpro.c desk/deskmain.c desk/desksupp.c: Code cleanup: make
   shel_write() 'isover' parameter explicitly 1 (no other value is
   supported). (RFB)
+- aes/gemshlib.c: Remove PC-GEM-only stuff from shel_write(), improve
+  comments. (RFB)
